--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=cotien1808
 # JPA Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.security.user.name= admin
+spring.security.user.password=admin
+spring.security.user.roles=ADMIN
